fix spacing in top dropdown for mobile view of header nav

--- a/src/stylesheets/components/_navigation.scss
+++ b/src/stylesheets/components/_navigation.scss
@@ -336,6 +336,8 @@
 .usa-nav-submenu {
   // @include usa-sidenav-sublist;
   padding-left: 1rem;
+  margin-bottom: 0rem;
+  margin-top: 0rem;
 
   @include media($nav-width) {
     @include unstyled-list;
